--- a/PortfolioY/portfolio.css
+++ b/PortfolioY/portfolio.css
@@ -10,7 +10,7 @@
 }
 nav{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 2em;
 }
 .track-nav{
@@ -33,6 +33,7 @@ nav{
 }
 .secondary-container h1{
     font-size: 3rem;
+    font-style: italic;
 }
 button{
     padding: 1.1em 5em;
@@ -48,7 +49,8 @@ button{
     color: #fff;
 }
 .about-container button{
-    background-color: #fff;
+    background-color: #DE1E6E;
+    border: white 2px solid;
 }
 .image-container {
     display: flex;
@@ -62,7 +64,7 @@ button{
     border: 2px dotted #fff;
 }
 .image-container button{
-    background-color: #DE1E6E;
+    background-color: #fff;
 }
 .project-container{
     margin-right: 10em;
@@ -75,4 +77,7 @@ button{
 .handles-container a{
     color: #fff;
     font-size: 2rem;
+}
+.about{
+    margin-top: 60px;
 }
